substrate/frame/support/test/tests/benchmark_ui/bad_return_type_non_result.stderr
error: expected `Result`
  --> tests/benchmark_ui/bad_return_type_non_result.rs:27:31
   |
27 |     fn bench(y: Linear<1, 2>) -> String {
   |                                  ^^^^^^
